# wasmcloud-playpen

./: README.md  docker-compose.yml
goodbye/: Cargo.toml  Makefile  README.md  actor.mk
goodbye/src/: lib.rs
hello/: Cargo.toml  Makefile  README.md  actor.mk
hello/src/: lib.rs
translate/: Makefile  codegen.toml  translate.smithy
translate/rust/: Cargo.toml
translate/rust/src/: lib.rs  translate.rs
