[package]
name = "hello"
version = "0.1.4"
authors = [ "" ]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hello"

[dependencies]
async-trait = "0.1"
futures = "0.3"
form_urlencoded = "1.0"
serde_bytes = "0.11"
serde = {version = "1.0", features = ["derive"]}
wasmbus-rpc = "0.4"
wasmcloud-interface-httpserver = "0.1"
translate-interface = { path = "../translate/rust" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
